--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
+  <div class="container">
+    <div class="card">
+      <p><img src="images/avatar-jessica.jpeg" alt="avatar image"></p>
+      <p>Jessica Randall</p>
+      <p>London, United Kingdom</p>
+      <p>"Front-end developer and avid reader."</p>
+      <p class="link"><a href="">GitHub</a></p>
+      <p class="link"><a href="">Frontend Mentor</a></p>
+      <p class="link"><a href="">LinkedIn</a></p>
+      <p class="link"><a href="">Twitter</a></p>
+      <p class="link"><a href="">Instagram</a></p>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
