--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles/styles.css">
   
   <title>Frontend Mentor | Social links profile</title>
 
@@ -12,15 +15,15 @@
 <body>
   <div class="container">
     <div class="card">
-      <p><img src="images/avatar-jessica.jpeg" alt="avatar image"></p>
-      <p>Jessica Randall</p>
-      <p>London, United Kingdom</p>
+      <p><img src="assets/images/avatar-jessica.jpeg" alt="avatar image"></p>
+      <p class="large-text">Jessica Randall</p>
+      <p class="small-text">London, United Kingdom</p>
       <p>"Front-end developer and avid reader."</p>
-      <p class="link"><a href="">GitHub</a></p>
-      <p class="link"><a href="">Frontend Mentor</a></p>
-      <p class="link"><a href="">LinkedIn</a></p>
-      <p class="link"><a href="">Twitter</a></p>
-      <p class="link"><a href="">Instagram</a></p>
+      <a href="">GitHub</a>
+      <a href="">Frontend Mentor</a>
+      <a href="">LinkedIn</a>
+      <a href="">Twitter</a>
+      <a href="">Instagram</a>
     </div>
   </div>
   <div class="attribution">
