--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <p class="large-text">Jessica Randall</p>
       <p class="small-text">London, United Kingdom</p>
       <p>"Front-end developer and avid reader."</p>
-      <a href="">GitHub</a>
-      <a href="">Frontend Mentor</a>
-      <a href="">LinkedIn</a>
-      <a href="">Twitter</a>
-      <a href="">Instagram</a>
+      <a href="#" target="_blank">GitHub</a>
+      <a href="#" target="_blank">Frontend Mentor</a>
+      <a href="#" target="_blank">LinkedIn</a>
+      <a href="#" target="_blank">Twitter</a>
+      <a href="#" target="_blank">Instagram</a>
     </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#" target="_blank">Katleho Makhooane</a>.
   </div>
 </body>
 </html>
